# rag-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: Home.py
app/pages/: 1_Dashboard.py
app/utils/: db.py
data/ground_truth/: questions.example.json
docker/postgres/: init.sql
src/: config.py
src/embeddings/: embedder.py
src/evaluation/: ground_truth.py  metrics.py  run_eval.py
src/ingestion/: chunk.py  extract.py  ingest.py
src/rag/: generator.py  pipeline.py  retriever.py
