[project]
name = "rag-app"
version = "0.1.0"
description = "Aplicacao RAG com Qdrant, Streamlit e Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.11",
    "fastembed>=0.3.6",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.5",
    "tqdm>=4.66",
    # --- dependencias de fases futuras (chat + dashboard), ja instaladas
    #     para nao precisar de novo "uv sync" quando forem religadas ---
    "streamlit>=1.38",
    "openai>=1.50",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "plotly>=5.24",
    "tiktoken>=0.8",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
    "pytest>=8.3",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"
